fixed mobile view (margin-bottom: 50rem on main) plus another testing on mobile view

--- a/src/components/Main/Results/results.scss
+++ b/src/components/Main/Results/results.scss
@@ -15,7 +15,6 @@ $font-size: 1.2rem;
 
 .results {
     margin-top: 1rem;
-    margin-bottom: 50rem;
     padding: 1rem;
     background: $boxBackgroundColor;
     border-radius: $borderRadius;
