--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -1,6 +1,8 @@
 // @import '../../styles/modal.css';
 .main {
     padding: 0 0.5rem;
+    margin-bottom: 50rem;
+
     &__modal {
         &__title {
             font-size: 2.5rem;
